Squashed 'subjobs/rnaseq_workflow/' changes from 04db62f..25eb6f4
25eb6f4 explicit use of readr

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 25eb6f4a23e0c450b730da96d4a40c0db0842bea

--- a/substeps/filter_and_align/doc/notebook.Rmd
+++ b/substeps/filter_and_align/doc/notebook.Rmd
@@ -42,7 +42,7 @@ pkgs <- c(
 #  "ggplot2",
 #  "magrittr",
 #  "purrr",
-#  "readr",
+  "readr",
 #  "stringr",
 #  "tibble",
 #  "tidyr",
@@ -147,7 +147,7 @@ is a one-one relationship between `run_id` and `sample_id`)
 - `lane_id` - which lane was a given sequencing sample ran on
 
 ```{r}
-seq_files <- read_tsv(
+seq_files <- readr::read_tsv(
   file.path(dirs$config, "sequencing_samples.tsv"),
   col_types = cols()
 )
