Squashed 'subjobs/rnaseq_workflow/' changes from 25eb6f4..4066952
4066952 import all packages that are stated in code

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 4066952ddb60c70e24c34e89d7470ccd6fda2a77

--- a/substeps/filter_and_align/doc/notebook.Rmd
+++ b/substeps/filter_and_align/doc/notebook.Rmd
@@ -37,14 +37,14 @@ library(here)
 ```{r, echo = show_setup}
 pkgs <- c(
   # CRAN
-#  "dplyr",
+  "dplyr",
 #  "forcats",
 #  "ggplot2",
-#  "magrittr",
+  "magrittr",
 #  "purrr",
   "readr",
 #  "stringr",
-#  "tibble",
+  "tibble",
 #  "tidyr",
 
   # Bioconductor
@@ -53,7 +53,7 @@ pkgs <- c(
 #  "edgeR",
 
   # My packages
-#  "reeq",
+  "reeq"
 #  "s3tree"
 )
 
