Squashed 'subjobs/rnaseq_workflow/' changes from ca733d3..cf37c2d
cf37c2d use lane-merged featureCounts files

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: cf37c2d4b9aea6a230785ecd3b93522dbe30f60b

--- a/substeps/filter_and_align/doc/notebook.Rmd
+++ b/substeps/filter_and_align/doc/notebook.Rmd
@@ -97,7 +97,7 @@ define_file_map <- function(dirs, seq_files) {
     dplyr::mutate(
       counts = file.path(
         dirs$counts, study_id, sample_id,
-        paste0(run_id, "_", lane_id, ".fcount.short")
+        paste0(run_id, ".fcount.short")
       )
     )
 }
@@ -185,7 +185,9 @@ dirs <- list(
 
 dirs$reads <- file.path(dirs$job_data, "reads")
 dirs$align <- file.path(dirs$job_data, "align")
-dirs$counts <- file.path(dirs$job_data, "align")
+dirs$counts <- file.path(
+  dirs$job_data, "quantify", "with_duplicates"
+)
 dirs$annotations <- file.path(dirs$job_data, "annotations")
 ```
 
