Squashed 'subjobs/rnaseq_workflow/' changes from cf37c2d..34efb3c
34efb3c explicit use of edgeR

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 34efb3c3a00a6c149a7fa2606c9aefd6dbc52cf4

--- a/substeps/filter_and_align/doc/notebook.Rmd
+++ b/substeps/filter_and_align/doc/notebook.Rmd
@@ -52,7 +52,7 @@ pkgs <- c(
   # Bioconductor
   #  "biomaRt",
   #  "cqn",
-  #  "edgeR",
+   "edgeR",
 
   # My packages
   "reeq"
@@ -360,7 +360,7 @@ original RNA-Seq libraries).
 
 ```{r}
 dge$samples$rrna.size <- dge[dge$genes$gene_biotype == "rRNA", ] %>%
-  getCounts() %>%
+  edgeR::getCounts() %>%
   colSums()
 ```
 
