Squashed 'subjobs/rnaseq_workflow/' changes from 34efb3c..6278bb1
6278bb1 fix covariate requirements in rRNA plot

git-subtree-dir: subjobs/rnaseq_workflow
git-subtree-split: 6278bb115f8ca1f7fd14c04b86d6bf4fa360f4e0

--- a/substeps/filter_and_align/doc/notebook.Rmd
+++ b/substeps/filter_and_align/doc/notebook.Rmd
@@ -367,10 +367,9 @@ dge$samples$rrna.size <- dge[dge$genes$gene_biotype == "rRNA", ] %>%
 ```{r, fig.width = 6.4}
 dge$samples %>%
   ggplot(
-    aes(x = lib.size, y = rrna.size, col = cml_sample, shape = seq_batch)
+    aes(x = lib.size, y = rrna.size, col = sample_id)
   ) +
-  geom_point() +
-  scale_colour_manual(values = theming$patient)
+  geom_point()
 ```
 
 
